--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Travis Fischer <travis@transitivebullsh.it>",
   "repository": "transitive-bullshit/nextjs-notion-starter-kit",
   "license": "MIT",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -25,7 +26,6 @@
     "@fisch0920/use-dark-mode": "^2.4.0",
     "@keyvhq/core": "^1.6.9",
     "@keyvhq/redis": "^1.6.10",
-    "@react-icons/all-files": "^4.1.0",
     "@vercel/og": "^0.0.19",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-notion-x": "^6.15.6",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
