--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
+    "postinstall": "patch-package",
     "build": "next build",
     "start": "next start",
     "deploy": "vercel deploy",
@@ -40,7 +41,9 @@
     "notion-utils": "^6.15.6",
     "p-map": "^5.3.0",
     "p-memoize": "^6.0.1",
+    "patch-package": "^7.0.1",
     "posthog-js": "^1.20.2",
+    "postinstall-postinstall": "^2.1.0",
     "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.2.0",
